--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,35 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.rizvn</groupId>
-    <artifactId>FieldMapper</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <artifactId>fieldMapper</artifactId>
+    <version>0.1</version>
+    <packaging>jar</packaging>
+
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Temporary Staging Repository</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
+    <!-- usage -
+    <repositories>
+        <repository>
+            <id>YOUR-PROJECT-NAME-mvn-repo</id>
+            <url>https://raw.github.com/rizvn/FieldMapper/mvn-repo/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    -->
+
 
     <properties>
         <spring.version>4.0.6.RELEASE</spring.version>
+        <github.global.server>github</github.global.server>
     </properties>
 
     <dependencies>
@@ -31,6 +55,8 @@
             <artifactId>joda-time</artifactId>
             <version>2.7</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -62,6 +88,38 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.11</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+                    <noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+                    <branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+                    <includes><include>**/*</include></includes>
+                    <repositoryName>FieldMapper</repositoryName>      <!-- github repo name -->
+                    <repositoryOwner>rizvn</repositoryOwner>    <!-- github username  -->
+                </configuration>
+                <executions>
+                    <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
